--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="area">
             <form id="formulario" action="result.html" method="GET">
                 <fieldset>
-                    <legend>Contrato de Comodato (CAR)</legend>
+                    <legend>Contrato de Comodato (ITR)</legend>
                     <br>
                     <div class="linha">
                         <label> Comodante: <br>
@@ -64,7 +64,7 @@
                     </div>
                     <br>
                     <div class="linha">
-                        <label> Registro CAR: <br>
+                        <label> Registro ITR: <br>
                             <input type="text" name="itr" placeholder="Registro ITR">
                         </label>
                     </div>
